# ARCADE

./: .gitignore  README.md  implementation.md  pyproject.toml  run_all_experiments.sh
configs/: adder_specs.json  professor_papers.json
configs/prompt_templates/: design_agent_system.txt  verifier_agent_system.txt  writing_agent_system.txt
docs/: NMED_AND_VERIFICATION.md  PAPER_WRITING_AND_AI_DETECTION.md  RUNNING_E1_E3_AND_PPA.md
harness/: Makefile  tb_adder.cpp
scripts/: dry_run_integrator.py  run_all_experiments_and_update_paper.py  run_e1_e2_e3.py
src/: __init__.py  aptpu_integrator.py  config.py  design_agent.py  orchestrator.py  paper_crawler.py  ppa_loop.py  raem.py  results_plotter.py  sim_harness.py  verifier_agent.py
